Fixed .message issue to improve alignment

--- a/02_domapps/02_guessnum/guess.css
+++ b/02_domapps/02_guessnum/guess.css
@@ -30,3 +30,7 @@ p {
 .row {
   padding-top: 50px;
 }
+
+.message {
+  padding-left: 37px;
+}
